# vla-scratch

./: INSTRUCTIONS.md  README.md  pyproject.toml  serve_policy.py  train_policy.py
examples/bbox_cotrain/: README.md  simulation.py  visualize_attention.py  visualize_bbox.py
examples/libero/: README.md  eval_libero_policy.py  simulation.py
examples/libero/scripts/: train-libero.sh
normalization_stats/: libero_proprio_stats.npz
normalization_stats/bbox_cotrain/: lerobot_norm_stats-horizon_10-history_0.npz
normalization_stats/libero/: lerobot-horizon_10-history_1.npz  lerobot-horizon_30-history_1.npz
normalization_stats/libero/IPEC-COMMUNITY/: libero_no_noops_1.0.0_lerobot-global-horizon_20-history_1.npz  libero_no_noops_1.0.0_lerobot-horizon_30-history_10.npz
scripts/: README.md  compute_norm_stats.py  eval.py  eval_policy.py  predict_bbox.py  serve_policy.py  train_policy.py  visualize_attention.py
vla_scratch/configs/data/: __init__.py  dont_blind.py  libero.py  libero_global.py
vla_scratch/datasets/: __init__.py  base.py  config.py  data_types.py  libero.py  math_utils.py  transforms.py
vla_scratch/datasets/bbox_cotrain/: config.py  dataset.py
vla_scratch/datasets/dont_blind/: config.py
vla_scratch/datasets/libero/: common.py  config.py  (+3 more)
vla_scratch/helpers/: training.py
vla_scratch/policies/: README.md  base.py  config.py  utils.py
vla_scratch/serving/: msgpack_numpy.py  transforms.py  websocket_policy_server.py
vla_scratch/transforms/: common.py  data_types.py  normalization.py
vla_scratch/utils/: __init__.py  checkpoint.py  config.py
(+18 files in other folders)
