[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vla-scratch"
version = "0.1.0"
description = "Utilities for working with VLA Scratch datasets and policies."
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "h5py",
    "transformers",
    "jaxtyping",
    "fsspec",
    "filelock",
    "tqdm",
    "einops",
    "tensordict",
    "hydra-core",
    "omegaconf",
    "wandb",
    "setproctitle",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "vla_scratch",
    "vla_scratch.*",
]
namespaces = true

# uv-specific configuration
# - `uv sync` installs [project.dependencies]
# - `uv sync --dev` also installs [tool.uv].dev-dependencies
[tool.uv]
dev-dependencies = [
    "pytest",
]
python-install-mirror = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
